--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,14 @@
 #header{
-    background-color: #323639;
+    background-color: #313c4e;
+    padding-top: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
 }
 #header h1{
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
 }
 #header h3{
     color: #276d81;
