--- a/css/main.css
+++ b/css/main.css
@@ -6,19 +6,47 @@
     padding-left: 40px;
 }
 #header h1{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
+    color: white;;
+    font-size: 40px;
+    padding-bottom: 5px;
+
 }
 #header h3{
     color: #276d81;
+    padding-bottom: 15px;
 }
 #header p{
     color: white;
 }
 #contact{
     background-color: #222a33;
+    text-align: center;
 }
 #contact a{
     color: white;
 }
+#main-content{
+    background-color: white;
+}
+#left{
+    background-color: white;
+}
+.content-box h2{
+    color: #449399;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
