--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 800px;
+    margin-left: center;
+} 
 #header{
     background-color: #313c4e;
     padding-top: 40px;
@@ -6,34 +11,75 @@
     padding-left: 40px;
 }
 #header h1{
-    color: white;;
-    font-size: 40px;
-    padding-bottom: 5px;
-
+    color: white;
+    font-size: 30px;
+    font-family: Bahnschrift;
+    text-decoration: none;
+    font-weight: lighter;
 }
 #header h3{
-    color: #276d81;
+    color: rgb(66 139 145);
+    font-size: 20px;
+    font-family: Bahnschrift;
+    font-weight: lighter;
     padding-bottom: 15px;
 }
 #header p{
     color: white;
+    font-size: 15px;
+    font-family: Bahnschrift;
+    font-weight: lighter;
 }
 #contact{
-    background-color: #222a33;
+    background-color: rgb(34 42 51);
     text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 #contact a{
     color: white;
+    font-size: 13px;
+    font-family: Bahnschrift;
+    font-weight: lighter;
 }
-#main-content{
-    background-color: white;
+#main-content h2{
+    color: rgb(68 147 154);
+    font-size: 23px;
+    font-family: Bahnschrift;
+    font-weight: bolder;
+    padding-top: 20px;
+    padding-bottom: 5px;
 }
-#left{
-    background-color: white;
+#main-content h3{
+    color: black;
+    font-size: 20px;
+    font-family: Bahnschrift;
+    font-weight: bolder;
+    padding-bottom: 4px;
 }
-.content-box h2{
-    color: #449399;
+#main-content h4{
+    color: black;
+    font-size: 15px;
+    font-family: Bahnschrift;
+    font-weight: bolder;
+    padding-bottom: 4px;
 }
+#main-content span{
+    color: rgb(155 165 161);
+    font-size: 13px;
+    font-family: Bahnschrift;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+#main-content ul{
+    color: black;
+    font-size: 14px;
+    font-family: Bahnschrift;
+    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+
 
 
 
