--- a/css/main.css
+++ b/css/main.css
@@ -1,105 +1,124 @@
-#header{
-    background-color: #313c4e;
-    padding-top: 30px;
-    padding-right: 0px;
-    padding-bottom: 30px;
-    padding-left: 30px;
-}#header h1{
-    color: white;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    padding-bottom: 5px;
+#header {
+  background-color: #313c4e;
+  padding-top: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  display: flex;
 }
-#header h3{
-    color: rgb(66 139 145);
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    padding-bottom: 10px;
+.header-left{
+width: 75;
 }
-#header p{
-    color: white;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    padding-right: 500px;
+.header-left{
+width: 25;
 }
-#contact{
-    background-color: rgb(34 42 51);
-    text-align: center;
-    font-size: 10px;
-    text-size-adjust: 18px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+#header h1 {
+  color: white;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  padding-bottom: 5px;
 }
-#contact a{
-    color: white;
-    padding-left: 15px;
-    font-size: 20px;
+#header h3 {
+  color: rgb(66 139 145);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  padding-bottom: 10px;
+}
+#header p {
+  color: white;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  padding-right: 500px;
+}
+#contact {
+  background-color: rgb(34 42 51);
+  text-align: center;
+  font-size: 10px;
+  text-size-adjust: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+#contact a {
+  color: white;
+  padding-left: 15px;
+  font-size: 20px;
+  display: inline-block;
 }
 #main-content {
-    padding-top: 10px;
-    padding-bottom: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
 }
-#left{
-    font-family: Arial, Helvetica, sans-serif;
-    width:50%;
+#left {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 50%;
 }
-#right{
-    font-family: Arial, Helvetica, sans-serif;
-    width:50%;
-}    
-#main-content h2{
-    color: #449399;
-    font-size: 23px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: underline;
-    padding-top: 20px;
-    padding-bottom: 10px;
+#right {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 50%;
 }
-.content-box-detail h3{
-    color: black;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 3px;
-    text-decoration: none;
+#main-content h2 {
+  color: #449399;
+  font-size: 23px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: underline;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
-.content-box-detail p{
-    color: black;
-    font-size: 17;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 3px;
+.content-box-detail h3 {
+  color: black;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 3px;
+  text-decoration: none;
 }
-.content-box-detail h4{
-    color: black;    
-}    
-.highlight-text-1{
-    color: #378cb6;
-    font-style: italic;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    padding-left: 10px;
-    padding-bottom: 20px;
+.content-box-detail p {
+  color: black;
+  font-size: 17;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 3px;
 }
-.highlight-text-2{
-    color: #423b4b;
-    font-style: italic;
-    padding-bottom: 5px;
+.content-box-detail h4 {
+  color: black;
 }
-.content-box-tag-1{
-    margin: 4px;
-    background-color: darkgray;
-    padding: 5px;
-    color: white;
+.highlight-text-1 {
+  color: #378cb6;
+  font-style: italic;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  padding-left: 10px;
+  padding-bottom: 20px;
 }
-.content-box-tag-2{
-   margin: 4px;
-   border: 1px solid black;
-    padding: 5px;
-    color: black;
+.highlight-text-2 {
+  color: #423b4b;
+  font-style: italic;
+  padding-bottom: 5px;
 }
-
+.content-box-tag-1 {
+  border: 2px solid #a1abbe;
+  padding: 3px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 10px;
+  width: 80px;
+  background-color: darkgray;
+  font-size: 15px;
+  color: white;
+}
+.content-box-tag-2 {
+  border: 2px solid black;
+  padding: 5px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 10px;
+  width: 100px;
+  background-color: white;
+  font-size: 15px;
+  color: black;
+}
